# gnu_mlv

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  mlv_rcs_revision  todo
MLV/: MLV_all.h  MLV_event.h  MLV_image.h  MLV_input_box.h  MLV_input_box_va.h  MLV_keyboard.h  MLV_mouse.h  MLV_net.h  MLV_random.h  MLV_shape.h  MLV_text.h  MLV_text_va.h  MLV_turtle.h  MLV_window.h  MLV_xml_va.h  Makefile.am  Makefile.in  animation.c  audio.c  config.h.in  data_structure.h  event.c  image.c  input_box.c  input_box_wait.c  keyboard.c  list.c  mouse.c  net.c  random.c  sdlinitialisation.c  sdlinitialisation.h  shapes.c  test_list.c  test_random.c  test_turtle.c  text.c  tree_map.c  tree_map.h  tree_set.c  (+6 more)
MLV/experimental/: window.hpp
config/am/: aminclude.am
correction_tp5/: Cercle.c  Cercle_anim.c  Cercle_epais.c  Ellipse.c  Makefile  Polygone.c  Rectangle.c  exercice6.c
data/: Makefile.in
data/font/: Makefile.in
debian/: changelog  control  copyright  files  libmlv3-dev.docs  libmlv3-dev.links  libmlv3-dev.lintian-overrides  libmlv3.links  rules
doc/: Doxyfile  Doxyheader_Occitan.in  Makefile.in  index.html.in  main_documentation_doxygen.c.in  main_documentation_doxygen.in  rectangle-ellipse.eps  rectangle.eps
examples/: Makefile.in
examples/advanced/: 01_texts_and_boxes.c  02_font.c  03_music.c  04_sound.c  05_playlist.c  06_image.c  07_transparency.c  08_zone_click.c  09_animation.c  10_read_xml_file.c  11_animation_book.c  12_paths.c  13_network_server.c  14_network_client.c  COPYRIGHT  Makefile.am  Makefile.in  makefile-examples
examples/beginner/: 01_hello_world.c  02_shapes.c  03_random.c  04_texts_and_boxes.c  05_mouse.c  06_keyboard.c  07_input_box.c  08_mouse_keyboard_input_box_timer.c  08_mouse_keyboard_timer.c  11_turtle.c  (+4 more)
packaging/: Makefile.am  Makefile.in
packaging/windows/: Makefile.am  Makefile.in  create_canonical_developpement_kit.in  create_code_blocks_package.in  create_dev_cpp_package.in  create_win32_binaries.in  my_project.cbp.in  my_project.dev.in
packaging/windows/cross-compilation/: cross_compilation_ubuntu.in  definition_of_environement_variables.in  mingw_compilation_for_mlv.in  mlv_compilation_from_scratch_ubuntu.in  mlv_compilation_ubuntu.in
packaging/windows/cross-compilation/external_libraries/: copyright  libSDL_mixer.la.in  libz.la.in
(+42 files in other folders)
