#
#   This file is part of the MLV Library.
#
#   Copyright (C) 2010 Adrien Boussicault, Marc Zipstein
#
#
#    This library is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This library is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this Library.  If not, see <http://www.gnu.org/licenses/>.
#

EXTRA_DIST= cross-compilation/external_libraries/freetype-2.3.9.tar.gz \
	cross-compilation/external_libraries/libpng-1.4.1.tar.gz \
	cross-compilation/external_libraries/libSDL_mixer.la \
	cross-compilation/external_libraries/mingw32-gettext-0.17-7.zip \
	cross-compilation/external_libraries/mingw32-glib2-2.19.5-2.zip \
	cross-compilation/external_libraries/mingw32-iconv-1.12-7.zip \
	cross-compilation/external_libraries/SDL-1.2.13.tar.gz \
	cross-compilation/external_libraries/SDL_gfx-2.0.19.tar.gz \
	cross-compilation/external_libraries/SDL_image-1.2.10.tar.gz \
	cross-compilation/external_libraries/SDL_mixer-1.2.12-win32-x64.zip \
	cross-compilation/external_libraries/SDL_mixer-1.2.12-win32.zip \
	cross-compilation/external_libraries/SDL_mixer-devel-1.2.12-VC.zip \
	cross-compilation/external_libraries/libstdc++-6.dll \
	cross-compilation/external_libraries/libgcc_s_dw2-1.dll \
	cross-compilation/external_libraries/jpegsrc.v8d.tar.gz \
	cross-compilation/external_libraries/tiff-4.0.1.tar.gz \
	cross-compilation/external_libraries/SDL_ttf-2.0.9.tar.gz \
	cross-compilation/external_libraries/zlib-1.2.3.tar.gz \
	cross-compilation/external_libraries/libxml2-git-snapshot.tar.gz \
	cross-compilation/external_libraries/copyright \
	README

clean-local:
	- rm -rf cross-compilation/fakeroot-mingw32
	- rm -rf mlv-[0-9]*.[0-9]*-canonical-developpement-kit
	- rm -rf mlv-[0-9]*.[0-9]*-code_blocks
	- rm -rf mlv-[0-9]*.[0-9]*-dev-cpp
	- rm -rf mlv-[0-9]*.[0-9]*-win32

